--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.439.0",
+    "maxime-component-modal": "^0.0.4",
     "next": "14.2.6",
     "react": "^18",
     "react-day-picker": "^8.10.1",
